--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -213,6 +213,11 @@
     .news-headlines a:hover, .news-headlines a:focus, .updates a:hover, .updates a:focus {
       color: blue !important;
     }
+
+    .adverts{
+      position: fixed;
+      top: 160px;
+}
   </style>
 
 
@@ -355,6 +360,9 @@
       </div>
     </div><br />
 
+    <div class="adverts">
+      <img src="/adverts/01.jpg"></img>
+    </div>
     <div class="row" style="padding-right: 64px; top: -36px; position: relative;">
 
       <button onclick="goToExtras();" class="btn btn-default btn-circle btn-xl pull-right main-icon" type="button" >
