--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -41,7 +41,7 @@
           </ul>
         </div>
         <div class="footer">
-          <a href="/browse_by_category/<%= @secondary_category_id %>" class="btn btn-metis-1 btn-lg btn-rect">Browse Secondary Books</a>
+          <a href="/browse_by_category/<%= @secondary_category_id %>" class="btn btn-danger btn-rect">Browse Secondary Books</a>
         </div>
       </li>
       <li class="col-lg-3">
