--- a/app/views/students/select_books_from_store.rhtml
+++ b/app/views/students/select_books_from_store.rhtml
@@ -30,6 +30,7 @@
   .primary, .secondary, .tertiary, .readers, .posters, .catalogs{
     display: none;
   }
+
 </style>
 <!--<div class="alert alert-success">
   Welcome to Bookstore. Subscribe to books that you like. Books that you have already subscribed to are NOT visible
@@ -190,9 +191,9 @@
               <% group.each do |catalog| %>
                 <td style="padding-right: 20px;">
                   <div class="media">
-                    <a href="#" class="pull-left">
+                    <!--<a href="#" class="pull-left">
                       <img class="media-object thumb-sm" src="/catalogs/<%= catalog.filename %>"/>
-                    </a>
+                    </a>-->
 
                     <div>
                       <p>
@@ -201,7 +202,7 @@
                       </p>
 
                       <button onclick="selectCatalogConfirm('<%= catalog.catalog_id %>')" class="btn btn-primary"><i class="fa fa-thumbs-up "></i> Select</button>
-                      <button onclick="zoomCatalog('<%= catalog.catalog_id %>')" class="btn btn-success"><i class="fa fa-eye"></i> Zoom</button>
+                      <button onclick="viewCatalog('<%= catalog.catalog_id %>')" class="btn btn-success"><i class="fa fa-eye"></i> View</button>
                     </div>
                   </div>
                 </td>
@@ -317,7 +318,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="zoomCatalogModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog" style="width: 60%;">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -327,6 +328,7 @@
         <div class="catalog-zoom">
 
         </div>
+        <iframe  width="100%" height="800px" src=""></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Okay</button>
@@ -495,7 +497,7 @@
   }
 
 
-  function zoomCatalog(catalog_id){
+  function viewCatalog(catalog_id){
     //catalog-zoom
     jQuery('#zoomCatalogModal').modal('show');
     jQuery.ajax({
@@ -505,16 +507,17 @@
       beforeSend: function(){
         jQuery(".catalog-zoom").html("Loading........")
       },
-      success: function(result){
-        img = '<img src="/catalogs/' + result+ '"></img>';
-        jQuery(".catalog-zoom").html(img)
+      success: function(filename){
+        jQuery(".catalog-zoom").hide();
+        iframe = document.getElementsByTagName('iframe')[0];
+        iframe.src = "/catalogs/" + filename;
+        //jQuery(".catalog-zoom").html(img);
       }
 
     });
   }
 
   function zoomPoster(poster_id){
-    //catalog-zoom
     jQuery('#zoomPosterModal').modal('show');
     jQuery.ajax({
       type: "POST",
