--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -209,6 +209,22 @@
           </li>
 
           <li class="panel ">
+            <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#component-ads">
+              <i class="icon-folder-open-alt"> </i>Manage Ads
+
+              <span class="pull-right">
+                <i class="icon-angle-left"></i>
+              </span>
+              &nbsp;
+            </a>
+            <ul class="collapse" id="component-ads">
+
+              <li class=""><a href="/new_advert"><i class="icon-angle-right"></i> New Ad </a></li>
+              <li class=""><a href="/remove_adverts"><i class="icon-angle-right"></i> Remove Ads </a></li>
+            </ul>
+          </li>
+
+          <li class="panel ">
             <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#faculties-nav">
               <i class="icon-folder-open-alt"> </i>Manage Faculties
 
