--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -217,7 +217,7 @@
     .adverts{
       position: fixed;
       top: 160px;
-}
+    }
   </style>
 
 
@@ -308,12 +308,24 @@
       <span class="pull-right" style="position: relative; bottom:  50px; padding-right: 5px;"><a href="#" onclick="return showNewNotesPopup();"><i class="fa fa-plus"></i> New Note</a></span>
     </div>
     <div style="padding-left: 5px; width: 98%;">
-      <div class="well well-large" style="border-radius: 0px; min-height: 120px;">
-        <b class="notes-header">Apps </b>
-        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-facebook"></span> Facebook </button>
-        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-twitter"></span> Twitter </button>
-        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-wechat"></span> We Chatt </button>
+      <div class="well well-large" style="border-radius: 0px; min-height: 300px;">
+        <b class="notes-header">My Bookmarks </b>
+        <div style="overflow-y: auto; height: 210px; width: 109%">
+          <ul>
+            <% count = 1 %>
+            <% user_book_marks.each do |user_book_mark| %>
+              <li>
+                <a title="<%= user_book_mark.link %>" class="notes" href="<%= user_book_mark.link %>"><%= "#{count}.#{UserNote.trim(user_book_mark.link, 100)}"%></a>
+                <span onclick="showRemoveNotesPopup(<%= user_book_mark.book_mark_id%>);" style="color: #8B0000; padding-right: 10px !important;" class="pull-right del">X</span></li>
+              <% count = count + 1 %>
+            <% end %>
+          </ul>
+        </div>
+        <br />
+        <span class="pull-right" style="position: relative; bottom:  -0px;"><a href="#" onclick="return showNewBookmarkPopup();"><i class="fa fa-plus"></i> New Bookmark</a></span>
+
       </div>
+
     </div>
   </div>
 
@@ -495,6 +507,36 @@
         </div>
       </div>
 
+
+      <div class="col-lg-12">
+        <div class="modal fade" id="newBookmark" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                <h4 class="modal-title" id="H4"> <b id="field-title">Bookmark</b></h4>
+              </div>
+              <div class="modal-body">
+                <form action="/students/save_bookmark" role="form" class="form-horizontal" method="POST" id="bookmarkForm">
+                  <div class="form-group">
+                    <div>
+                      <textarea class="form-control" rows="5" name="bookmark"></textarea>
+                    </div>
+                  </div>
+                </form>
+              </div>
+
+              <div class="modal-footer">
+                <button data-dismiss="modal" class="btn btn-default" type="button">Close</button>
+                <button class="btn btn-primary" type="button" onclick="saveBookmark();">Create Bookmark</button>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+
       <!-- Modal -->
       <div class="modal fade" id="deleteNotesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -588,8 +630,17 @@
       return false;
     }
 
+    function showNewBookmarkPopup(){
+      jQuery('#newBookmark').modal('show');
+      return false;
+    }
+
     function saveUserNotes(){
       jQuery("#userNotesForm").submit();
+    }
+
+    function saveBookmark(){
+      jQuery("#bookmarkForm").submit();
     }
 
     var currentUserNotedID;
