--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -309,7 +309,7 @@
     </div>
     <div style="padding-left: 5px; width: 98%;">
       <div class="well well-large" style="border-radius: 0px; min-height: 300px;">
-        <b class="notes-header">My Bookmarks </b>
+        <b><center>My Bookmarks</center> </b>
         <div style="overflow-y: auto; height: 210px; width: 109%">
           <ul>
             <% count = 1 %>
