--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -314,6 +314,15 @@
         </div>
       </div>
       <span class="pull-right" style="position: relative; bottom:  50px; padding-right: 5px;"><a href="#" onclick="return showNewNotesPopup();"><i class="fa fa-plus"></i> New Note</a></span>
+
+    <div style="padding-left: 5px; width: 98%;">
+      <div class="well well-large" style="border-radius: 0px; min-height: 120px;">
+        <b class="notes-header">Apps </b>
+        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-facebook"></span> Facebook </button>
+        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-twitter"></span> Twitter </button>
+        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-wechat"></span> We Chatt </button>
+      </div>
+    </div>
     </div>
     <div style="padding-left: 5px; width: 98%;">
       <div class="well well-large" style="border-radius: 0px; min-height: 300px;">
